--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 
 #acceptAll {
-    style="padding: 1rem;
+    padding: 1rem;
     color: #000;
     background-color: #ff0;
     text-decoration: none;
